infrastructure/web-app/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-localhost
  namespace: ingress-nginx
spec:
  ingressClassName: nginx
  rules:
  - host: andreyolv.dev
    http:
      paths:
      - backend:
          service:
            name: podinfo
            port:
              number: 80
        path: /
        pathType: Prefix

# kubectl port-forward --namespace=ingress-nginx service/ingress-nginx-controller 8080:80
# https://docs.rancherdesktop.io/how-to-guides/setup-NGINX-Ingress-Controller/
# https://www.fairwinds.com/blog/intro-to-kubernetes-ingress-set-up-nginx-ingress-in-kubernetes-bare-metal
